WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155443
Regression(
r197981
): Huge regression on Mac PLT
https://bugs.webkit.org/show_bug.cgi?id=155443
Summary
Regression(r197981): Huge regression on Mac PLT
Chris Dumez
Reported
2016-03-14 10:35:24 PDT
We have experience a huge regression on Mac PLT after <
http://trac.webkit.org/changeset/197981
>: (
rdar://problem/25113391
). So disable the feature until the performance issue is resolved.
Attachments
Patch
(1.55 KB, patch)
2016-03-14 10:37 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-03-14 10:35:36 PDT
rdar://problem/25113391
Chris Dumez
Comment 2
2016-03-14 10:37:20 PDT
Created
attachment 273987
[details]
Patch
Chris Dumez
Comment 3
2016-03-14 12:01:13 PDT
Comment on
attachment 273987
[details]
Patch Clearing flags on attachment: 273987 Committed
r198145
: <
http://trac.webkit.org/changeset/198145
>
Chris Dumez
Comment 4
2016-03-14 12:01:19 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 5
2016-03-14 20:38:50 PDT
The bots did not recover after this change.
Chris Dumez
Comment 6
2016-03-14 20:51:27 PDT
Reverted
r198145
for reason: This attempt to disable the feature did not fix the PLT regression Committed
r198188
: <
http://trac.webkit.org/changeset/198188
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug