Regression(r197981): Huge regression on Mac PLT https://bugs.webkit.org/show_bug.cgi?id=155443 <rdar://problem/25113391>

Reviewed by Gavin Barraclough.

We have experience a huge regression on Mac PLT after r197981, so
disable the feature until the performance issue is resolved.

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayer::supportsSmoothedLayerText):

Canonical link: https://commits.webkit.org/173562@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198145 268f45cc-cd09-0410-ab3c-d52691b4dbfc